--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <div class="carousel-item active" style="background-image: url(assets/img/poze\ centru/ski1.jpg)"></div>
       <div class="carousel-item" style="background-image: url(assets/img/poze\ centru/centru.jpg)"></div>  
       <div class="carousel-item" style="background-image: url(assets/img/poze\ centru/ski4.jpg)"></div>
-      <div class="carousel-item" style="background-image: url(assets/img/poze\ centru/centru-22.jpg)"></div>
+      <div class="carousel-item" style="background-image: url(assets/img/poze\ centru/centru-1.jpg)"></div>
       
        
 
@@ -215,7 +215,7 @@
               </p>
               <div class="social-links d-flex mt-3">
                 <a href="https://www.facebook.com/1snowboard" class="d-flex align-items-center justify-content-center"><i class="bi bi-facebook"></i></a>
-                <a href="https://www.instagram.com/inchirieridaria/" class="d-flex align-items-center justify-content-center"><i class="bi bi-instagram"></i></a>
+                <a href="https://www.instagram.com/inchirieri.daria.straja/" class="d-flex align-items-center justify-content-center"><i class="bi bi-instagram"></i></a>
                 <a href="https://www.tiktok.com/@inchirieri.daria.straja" class="d-flex align-items-center justify-content-center"><i class="bi bi-tiktok"></i></a>
               </div>
             </div>
