--- a/contact.html
+++ b/contact.html
@@ -115,7 +115,7 @@
               </p>
               <div class="social-links d-flex mt-3">
                 <a href="https://www.facebook.com/1snowboard" class="d-flex align-items-center justify-content-center"><i class="bi bi-facebook"></i></a>
-                <a href="https://www.instagram.com/inchirieridaria/" class="d-flex align-items-center justify-content-center"><i class="bi bi-instagram"></i></a>
+                <a href="https://www.instagram.com/inchirieri.daria.straja/" class="d-flex align-items-center justify-content-center"><i class="bi bi-instagram"></i></a>
                 <a href="https://www.tiktok.com/@inchirieri.daria.straja" class="d-flex align-items-center justify-content-center"><i class="bi bi-tiktok"></i></a>
               </div>
             </div>
