--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             <div class="service-item position-relative">
               <img src="assets/img/poze centru/centru.jpg" class="img-fluid" alt="">
               <h3>Service</h3>
-              <p>Dacă echipamentul duneavoastră are nevoie de întreținere, vă putem ajuta. Oferim servicii de cerurire, ascuțire canturi și reparații ale talpei. </p>
+              <p>Dacă echipamentul dum   neavoastră are nevoie de întreținere, vă putem ajuta. Oferim servicii de cerurire, ascuțire canturi și reparații ale talpei. </p>
               <a href="tarife.html" class="readmore stretched-link">Detalii <i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
