--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-7 text-center">
-            <h1 data-aos="fade-down">Distracția pe pârtie începe cu noi!</h1>
+            <h1 data-aos="fade-down">Distracția pe pârtie începe cu noi - Inchirieri Daria Straja</h1>
             <p data-aos="fade-up">
-              Bun venit! Dacă aveți în plan vizitarea stațiunii Straja, vă invităm să ne călcați pragul. Oferim servicii de închiriere de echipament, service, dar și cazare turiștilor noștri.</p>
+              Bun venit! Situați în inima stațiunii Straja, vă oferim servicii complete: inchiriere de echipament, service și cazare atât în Straja, cât și în Lupeni.</p>
           </div>
         </div>
       </div>
