--- a/cazare.html
+++ b/cazare.html
@@ -7,7 +7,7 @@
   <meta name="keywords" content="inchirieri, ski, schi, echipamente de iarna, inchirieri daria straja">
   <meta name="description" content="Aventura pe pârtie începe cu noi!">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Inchirieri Daria Straja</title>
+  <title>Cabana Daria Straja</title>
 
   <!-- Favicons -->
   <link href="assets/img/img-prov/icon.png" rel="icon">
