--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="author" content="Daria Gruian">
   <meta name="keywords" content="inchirieri, ski, schi, echipamente de iarna, inchirieri daria straja">
-  <meta name="description" content="Aventura pe pârtie începe cu noi!">
+  <meta name="description" content="Aventura pe pârtie începe cu noi! Situați în inima Strajei, vă oferim servicii complete: inchiriere de echipament, service și cazare atât în stațiune, cât și în orașul Lupeni.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Inchirieri Daria Straja</title>
 
@@ -66,9 +66,9 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-7 text-center">
-            <h1 data-aos="fade-down">Distracția pe pârtie începe cu noi - Inchirieri Daria Straja</h1>
+            <h1 data-aos="fade-down">Distracția pe pârtie începe cu noi! <br> Inchirieri Daria Straja</h1>
             <p data-aos="fade-up">
-              Bun venit! Situați în inima stațiunii Straja, vă oferim servicii complete: inchiriere de echipament, service și cazare atât în Straja, cât și în Lupeni.</p>
+              Bun venit! Vă oferim servicii complete chiar din inima Strajei: inchiriere de echipament, service de ski sau snowboard și cazare atât în Straja, cât și în orașul Lupeni.</p>
           </div>
         </div>
       </div>
