--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <div class="col-lg-7 text-center">
             <h1 data-aos="fade-down">Distracția pe pârtie începe cu noi! <br> Inchirieri Daria Straja</h1>
             <p data-aos="fade-up">
-              Bun venit! Vă oferim servicii complete chiar din inima Strajei: inchiriere de echipament, service de ski sau snowboard și cazare atât în Straja, cât și în orașul Lupeni.</p>
+              Bun venit! Vă oferim servicii complete chiar din inima Strajei: inchiriere de echipament, service de ski sau snowboard și cazare atât în stațiune, cât și în orașul Lupeni.</p>
           </div>
         </div>
       </div>
