--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-7 text-center">
-            <h1 data-aos="fade-down">Distracția pe pârtie începe cu noi! <br> Inchirieri Daria Straja</h1>
+            <h1 data-aos="fade-down">Distracția pe pârtie<br>începe cu noi!<br>Inchirieri Daria Straja</h1>
             <p data-aos="fade-up">
-              Bun venit! Vă oferim servicii complete chiar din inima Strajei: inchiriere de echipament, service de ski sau snowboard și cazare atât în stațiune, cât și în orașul Lupeni.</p>
+              Creează amintiri de neuitat alături de cei dragi! La centrul nostru găsești echipamente de top pentru întreaga familie, pentru a vă putea bucura împreună de magia iernii.</p>
           </div>
         </div>
       </div>
