--- a/cazare.html
+++ b/cazare.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TZD9TW4XC4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TZD9TW4XC4');
+</script>
   <meta charset="utf-8">
   <meta name="author" content="Daria Gruian">
   <meta name="keywords" content="inchirieri, ski, schi, echipamente de iarna, inchirieri daria straja">
