--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <div class="col-lg-7 text-center">
             <h1 data-aos="fade-down">Distracția pe pârtie<br>începe cu noi!</h1>
             <p data-aos="fade-up">
-              Creează amintiri de neuitat alături de cei dragi! La centrul de inchirieri Daria Straja găsești echipamente de top pentru întreaga familie, pentru a vă putea bucura împreună de magia iernii.</p>
+              La centrul de inchirieri Daria Straja găsești echipamente de top pentru întreaga familie, pentru a vă putea bucura împreună de magia iernii.</p>
           </div>
         </div>
       </div>
