--- a/cazare.html
+++ b/cazare.html
@@ -129,7 +129,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-remodeling">
               <div class="portfolio-content h-100">
-                <img src="assets/img/poze-interior/1.jpg" class="img-fluid" alt="">
+                <img src="assets/img/poze-interior/1.jpeg" class="img-fluid" alt="">
               </div>
             </div><!-- End Projects Item -->
 
@@ -141,31 +141,31 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-remodeling">
               <div class="portfolio-content h-100">
-                <img src="assets/img/poze-interior/3.jpg" class="img-fluid" alt="">
+                <img src="assets/img/poze-interior/3.jpeg" class="img-fluid" alt="">
               </div>
             </div><!-- End Projects Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-remodeling">
               <div class="portfolio-content h-100">
-                <img src="assets/img/poze-interior/4.jpg" class="img-fluid" alt="">
+                <img src="assets/img/poze-interior/4.jpeg" class="img-fluid" alt="">
               </div>
             </div><!-- End Projects Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-remodeling">
               <div class="portfolio-content h-100">
-                <img src="assets/img/poze-interior/5.jpg" class="img-fluid" alt="">
+                <img src="assets/img/poze-interior/5.jpeg" class="img-fluid" alt="">
               </div>
             </div><!-- End Projects Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-remodeling">
               <div class="portfolio-content h-100">
-                <img src="assets/img/poze-interior/6.jpg" class="img-fluid" alt="">
+                <img src="assets/img/poze-interior/6.jpeg" class="img-fluid" alt="">
               </div>
             </div><!-- End Projects Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-remodeling">
               <div class="portfolio-content h-100">
-                <img src="assets/img/poze-interior/7.jpg" class="img-fluid" alt="">
+                <img src="assets/img/poze-interior/7.jpeg" class="img-fluid" alt="">
               </div>
             </div><!-- End Projects Item -->
 
@@ -177,13 +177,13 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-remodeling">
               <div class="portfolio-content h-100">
-                <img src="assets/img/poze-interior/9.jpg" class="img-fluid" alt="">
+                <img src="assets/img/poze-interior/9.jpeg" class="img-fluid" alt="">
               </div>
             </div><!-- End Projects Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-remodeling">
               <div class="portfolio-content h-100">
-                <img src="assets/img/poze-interior/10.jpg" class="img-fluid" alt="">
+                <img src="assets/img/poze-interior/10.jpeg" class="img-fluid" alt="">
               </div>
             </div><!-- End Projects Item -->
 
