--- a/contact.html
+++ b/contact.html
@@ -91,9 +91,8 @@
 
             <div class="info-item  d-flex flex-column justify-content-center align-items-center">
               <i class="bi bi-telephone"></i>
-              <h3>Telefon</h3>
-              <p>0727672418 - Hoiny</p>
-              <p>(puteți scrie și pe whatsapp)</p>
+              <h3>Telefon/WhatsApp</h3>
+              <p>0727672418</p>
             </div><!-- End Info Item -->
           </div>
           <div class="col-lg-6">
