--- a/cazare.html
+++ b/cazare.html
@@ -116,7 +116,7 @@
               <a href="contact.html" class="btn-rezerva">Rezervare</a>
             </div>
             <div class="col-lg-5 order-1 order-lg-2 text-center" data-aos="fade-up" data-aos-delay="200">
-              <img src="assets/img/poze centru/6.jpeg" alt="" class="img-fluid">
+              <img src="assets/img/poze-interior/6.jpeg" alt="" class="img-fluid">
             </div>
           </div>
           <!-- ======= Our Projects Section ======= -->
