--- a/tarife.html
+++ b/tarife.html
@@ -160,9 +160,9 @@
   
 <div class="container">
   <p class="note"><b>*</b> Service-ul complet include încărcarea tălpii cu cofix, ceruire și ascuțirea canturilor.
-    <br>Închirierile se fac pe zi, între orele 9 - 21. 
-    <br>Copii sub 10 ani beneficiază de reducere 10 lei la echipamentul de ski.
-    <br>La închirierea echipamentului complet, ochelarii sau casca sunt 10 lei.
+    Închirierile se fac pe zi, între orele 9 - 21. 
+    Copii sub 10 ani beneficiază de reducere 10 lei la echipamentul de ski.
+    La închirierea echipamentului complet, ochelarii sau casca sunt 10 lei.
   </p>
 </div>
 
