--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
     <div id="hero-carousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="8000">
       <div class="carousel-item active" style="background-image: url(assets/img/poze\ centru/outside.jpg)"></div>
-      <div class="carousel-item active" style="background-image: url(assets/img/poze\ centru/ski1.jpg)"></div>
+      <div class="carousel-item" style="background-image: url(assets/img/poze\ centru/ski1.jpg)"></div>
       <div class="carousel-item" style="background-image: url(assets/img/poze\ centru/centru.jpg)"></div>  
       <div class="carousel-item" style="background-image: url(assets/img/poze\ centru/ski4.jpg)"></div>      
        
