--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="assets/css/main.css" rel="stylesheet" media=print>
+  <link href="assets/css/main.css" rel="stylesheet">
 </head>
 
 <body>
