--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <div id="hero-carousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="8000">
       <div class="carousel-item active" style="background-image: url(assets/img/poze\ centru/outside.jpg)" alt="imagine cu Straja de la imbarcarea telescaunului Alfa"></div>
       <div class="carousel-item" style="background-image: url(assets/img/poze\ centru/ski1.jpg)" alt="schiuri din centru"></div>
-      <div class="carousel-item" style="background-image: url(assets/img/poze centru/centru.jpg)" alt="centrul de inchirieri, din lateral"></div>  
+      <div class="carousel-item" style="background-image: url(assets/img/poze centru/centruu.jpg)" alt="centrul de inchirieri, din lateral"></div>  
       <div class="carousel-item" style="background-image: url(assets/img/poze\ centru/ski4.jpg)" alt="schiuri din centru"></div>      
        
 
@@ -183,7 +183,7 @@
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="500">
             <div class="service-item position-relative">
-              <img src="assets/img/poze centru/centru.jpg" class="img-fluid" alt="">
+              <img src="assets/img/poze centru/centruu.jpg" class="img-fluid" alt="">
               <h3>Service</h3>
               <p>Dacă echipamentul dum   neavoastră are nevoie de întreținere, vă putem ajuta. Oferim servicii de cerurire, ascuțire canturi și reparații ale talpei. </p>
               <a href="tarife.html" class="readmore stretched-link">Detalii <i class="bi bi-arrow-right"></i></a>
