--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </div>
 
     <div id="hero-carousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="8000">
-      <div class="carousel-item active" style="background-image: url(assets/img/poze centru/outside (2).jpg)" alt="imagine cu Straja de la imbarcarea telescaunului Alfa"></div>
+      <div class="carousel-item active" style="background-image: url(assets/img/poze\ centru/out.jpg)" alt="imagine cu Straja de la imbarcarea telescaunului Alfa"></div>
       <div class="carousel-item" style="background-image: url(assets/img/poze\ centru/ski1.jpg)" alt="schiuri din centru"></div>
       <div class="carousel-item" style="background-image: url(assets/img/poze\ centru/centruu.jpg)" alt="centrul de inchirieri din lateral"></div>  
       <div class="carousel-item" style="background-image: url(assets/img/poze\ centru/ski4.jpg)" alt="schiuri din centru"></div>      
