--- a/index.html
+++ b/index.html
@@ -77,16 +77,16 @@
           <div class="col-lg-7 text-center">
             <h1 data-aos="fade-down">Distracția pe pârtie<br>începe cu noi!</h1>
             <p data-aos="fade-up">
-              La centrul de inchirieri Daria Straja găsești echipamente de top pentru întreaga familie, pentru a vă putea bucura împreună de magia iernii.</p>
+              Ia-ți doar pofta de zăpadă, de restul ne ocupăm noi!</p>
           </div>
         </div>
       </div>
     </div>
 
     <div id="hero-carousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="8000">
-      <div class="carousel-item active" style="background-image: url(assets/img/poze\ centru/out.jpg)" alt="imagine cu Straja de la imbarcarea telescaunului Alfa"></div>
+      <div class="carousel-item active" style="background-image: url(assets/img/poze\ centru/telescaun.jpg)" alt="imagine cu Straja de la imbarcarea telescaunului Alfa"></div>
       <div class="carousel-item" style="background-image: url(assets/img/poze\ centru/ski1.jpg)" alt="schiuri din centru"></div>
-      <div class="carousel-item" style="background-image: url(assets/img/poze\ centru/centruu.jpg)" alt="centrul de inchirieri din lateral"></div>  
+      <div class="carousel-item" style="background-image: url(assets/img/poze\ centru/snowboarders.jpg)" alt="centrul de inchirieri din lateral"></div>  
       <div class="carousel-item" style="background-image: url(assets/img/poze\ centru/ski4.jpg)" alt="schiuri din centru"></div>      
        
 
