--- a/index.html
+++ b/index.html
@@ -175,17 +175,9 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="500">
             <div class="service-item position-relative">
               <img src="assets/img/poze centru/ski1.jpg" class="img-fluid" alt="">
-              <h3>Închiriere</h3>
-              <p>La centrul nostru veți găsi echipamente complete de ski si snowboard, săniuțe dar și alte accesorii.</p>
-              <a href="tarife.html" class="readmore stretched-link">Detalii <i class="bi bi-arrow-right"></i></a>
-            </div>
-          </div><!-- End Service Item -->
-
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="500">
-            <div class="service-item position-relative">
-              <img src="assets/img/poze centru/centruu.jpg" class="img-fluid" alt="">
-              <h3>Service</h3>
-              <p>Dacă echipamentul dum   neavoastră are nevoie de întreținere, vă putem ajuta. Oferim servicii de cerurire, ascuțire canturi și reparații ale talpei. </p>
+              <h3>🎿 Echipamente pentru toate vârstele</h3>
+              <p>
+De la ski și snowboard la săniuțe și accesorii de iarnă, la centrul nostru găsești tot ce ai nevoie pentru o zi completă pe pârtie, indiferent de nivel sau vârstă.</p>
               <a href="tarife.html" class="readmore stretched-link">Detalii <i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
@@ -193,9 +185,20 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="500">
             <div class="service-item position-relative">
               <img src="assets/img/poze-interior/3.jpeg" class="img-fluid" alt="">
-              <h3>Cazare</h3>
-              <p>Oferim servicii de cazare atât în stațiunea Straja, cât și în orașul Lupeni.</p>
+              <h3>🏠 Cazare la 10m de pârtie</h3>
+              <p>
+Îți oferim locuri de cazare atât chiar în stațiunea Straja, cât și în orașul Lupeni, ca să ai parte de confort și acces rapid la distracția de pe munte.</p>
               <a href="cazare.html" class="readmore stretched-link">Detalii <i class="bi bi-arrow-right"></i></a>
+            </div>
+          </div><!-- End Service Item -->
+
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="500">
+            <div class="service-item position-relative">
+              <img src="assets/img/poze centru/centruu.jpg" class="img-fluid" alt="">
+              <h3>🔧 Întreținere echipament</h3>
+              <p>
+Dacă schiurile sau placa ta au nevoie de un refresh, suntem aici să te ajutăm. La Daria găsești servicii de ceruire, ascuțire a canturilor și reparații profesionale ale tălpii – ca să te bucuri de o alunecare perfectă.</p>
+              <a href="tarife.html" class="readmore stretched-link">Detalii <i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
