--- a/cazare.html
+++ b/cazare.html
@@ -90,11 +90,6 @@
             <h4>Cabana Daria Straja</h4>
           </a>
         </li><!-- End tab nav item -->
-
-        <li class="nav-item col-6">
-          <a class="nav-link" data-bs-toggle="tab" data-bs-target="#tab-2">
-            <h4>Apartamente Lupeni</h4>
-          </a><!-- End tab nav item -->
       </ul>
 
       <div class="tab-content">
@@ -103,14 +98,14 @@
           <div class="row">
             <div class="col-lg-7 order-2 order-lg-1 mt-3 mt-lg-0 d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="100">
               <p>
-                Cabana Daria este situată la baza pârtiei principale (Constantinescu) din statiunea Straja, având 13 camere cu 2, 3 sau 4 locuri. Turiștii au la dispoziție sala de mese, bucătărie și grătar. 
-                <br>Turiștii care aleg să se cazeze la unul dintre apartamentele noastre sau la cabana Daria beneficiază de reduceri speciale la centrul de închirieri Daria, situat chiar la prima ușă de la colțul cabanei.
+                Cabana Daria este situată la baza pârtiei principale (Constantinescu) din stațiunea Straja, având 5 camere cu 2, 3 sau 4 locuri. Turiștii au la dispoziție sală de mese, bucătărie și grătar. 
+                <br>Turiștii care aleg să se cazeze la cabana Daria beneficiază de reduceri speciale la centrul de închirieri Daria, situat chiar la prima ușă de la colțul cabanei.
               </p>
-              <p>Prețurile variază în funcție de periodă și încep de la:</p>
+              <p>Prețurile pentru sezonul 2025-2026 variază în funcție de periodă și încep de la:</p>
               <ul>
-                <li><i class="bi bi-people-fill"></i> Cameră dublă matrimonială - 230 lei</li>
-                <li><i class="bi bi-people-fill"></i> Cameră de 3 persoane - 280 lei</li>
-                <li><i class="bi bi-people-fill"></i> Cameră de 4 persoane - 330 lei</li>
+                <li><i class="bi bi-people-fill"></i> Cameră dublă matrimonială - 220 lei</li>
+                <li><i class="bi bi-people-fill"></i> Cameră de 3 persoane - 300 lei</li>
+                <li><i class="bi bi-people-fill"></i> Cameră de 4 persoane - 350 lei</li>
               </ul>
               <p>Pentru a face o rezervare, vă rugam să ne contactați. Rezervarea se efectuează în urma achitării unui avans din partea clientului.</p>
               <a href="contact.html" class="btn-rezerva">Rezervare</a>
