--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 
     <div id="hero-carousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="8000">
       <div class="carousel-item active" style="background-image: url(assets/img/poze\ centru/telescaun.jpg)" alt="imagine cu Straja de la imbarcarea telescaunului Alfa"></div>
+      <div class="carousel-item" style="background-image: url(assets/img/poze\ centru/snowboarders.jpg)" alt="clienți mulțumiți de echipament pe pârtiile din Straja"></div>  
       <div class="carousel-item" style="background-image: url(assets/img/poze\ centru/ski1.jpg)" alt="schiuri din centru"></div>
-      <div class="carousel-item" style="background-image: url(assets/img/poze\ centru/snowboarders.jpg)" alt="centrul de inchirieri din lateral"></div>  
       <div class="carousel-item" style="background-image: url(assets/img/poze\ centru/ski4.jpg)" alt="schiuri din centru"></div>      
        
 
@@ -187,7 +187,7 @@ De la ski și snowboard la săniuțe și accesorii de iarnă, la centrul nostru 
               <img src="assets/img/poze-interior/3.jpeg" class="img-fluid" alt="">
               <h3>🏠 Cazare la 10m de pârtie</h3>
               <p>
-Îți oferim locuri de cazare atât chiar în stațiunea Straja, cât și în orașul Lupeni, ca să ai parte de confort și acces rapid la distracția de pe munte.</p>
+Îți oferim locuri de cazare în stațiunea Straja, ca să ai parte de confort și acces rapid la distracția de pe munte.</p>
               <a href="cazare.html" class="readmore stretched-link">Detalii <i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
@@ -197,7 +197,7 @@ De la ski și snowboard la săniuțe și accesorii de iarnă, la centrul nostru 
               <img src="assets/img/poze centru/centruu.jpg" class="img-fluid" alt="">
               <h3>🔧 Întreținere echipament</h3>
               <p>
-Dacă schiurile sau placa ta au nevoie de un refresh, suntem aici să te ajutăm. La Daria găsești servicii de ceruire, ascuțire a canturilor și reparații profesionale ale tălpii – ca să te bucuri de o alunecare perfectă.</p>
+Dacă echipamentul tău are nevoie de un refresh, suntem aici să te ajutăm. La Daria găsești servicii de ceruire, ascuțire a canturilor și reparații profesionale ale tălpii – ca să te bucuri de o alunecare perfectă.</p>
               <a href="tarife.html" class="readmore stretched-link">Detalii <i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
