--- a/tarife.html
+++ b/tarife.html
@@ -106,7 +106,7 @@
           </tr>
           <tr>
             <td>Ski (+ bețe)</td>
-            <td>30 lei</td>
+            <td>40 lei</td>
           </tr>
           <tr>
             <td>Snowboard</td>
@@ -133,12 +133,12 @@
         </thead>
         <tbody>
           <tr>
-            <td>Service ski complet</td>
-            <td class="no-br">100 lei</td>
+            <td>Service ski complet *</td>
+            <td class="no-br">120 lei</td>
           </tr>
           <tr>
-            <td>Service snowboard complet</td>
-            <td class="no-br">100 lei</td>
+            <td>Service snowboard complet *</td>
+            <td class="no-br">120 lei</td>
           </tr>
           <tr>
             <td>Ceruire</td>
@@ -159,7 +159,7 @@
 </div>
   
 <div class="container">
-  <p class="note"><b>*</b> Service-ul complet include încărcarea tălpii cu cofix, ceruire și ascuțirea canturilor.
+  <p class="note"><b>*</b> Service-ul complet include reparație prin încărcarea tălpii cu cofix (acoperirea zgârieturilor), ceruire și ascuțirea canturilor.
     Închirierile se fac pe zi, între orele 9 - 21. 
     Copii sub 10 ani beneficiază de reducere 10 lei la echipamentul de ski.
     La închirierea echipamentului complet, ochelarii sau casca sunt 10 lei.
