--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <div class="stats-item d-flex align-items-center w-100 h-100">
           <i class="bi bi-journal-richtext color-orange flex-shrink-0"></i>
           <div>
-            <span data-purecounter-start="0" data-purecounter-end="15" data-purecounter-duration="1" class="purecounter"></span>
+            <span data-purecounter-start="0" data-purecounter-end="17" data-purecounter-duration="1" class="purecounter"></span>
             <p>Ani în domeniu</p>
           </div>
         </div>
@@ -132,7 +132,7 @@
       <div class="col-lg-3 col-md-6">
         <div class="stats-item d-flex align-items-center w-100 h-100">
           <i class="bi bi-rocket-takeoff color-pink flex-shrink-0"></i>
-          <div>
+          <div><p style="color:black;">Peste</p>
             <span data-purecounter-start="0" data-purecounter-end="500" data-purecounter-duration="1" class="purecounter"></span>
             <p>Echipamente</p>
           </div>
